crates/catalog/tests/snapshots/golden__metadata_Sqlite.snap
---
source: crates/catalog/tests/golden.rs
expression: "format!(\"-- params: [{}]\\n{}\", params_string(q.params), q.sql)"
---
-- params: [TableId, Version]

            SELECT schema_json, partition_columns, table_properties
            FROM dl_metadata_updates
            WHERE table_id = ? AND version <= ?
            ORDER BY version DESC
            LIMIT 1
