crates/catalog/tests/snapshots/golden__protocol_Postgres.snap
---
source: crates/catalog/tests/golden.rs
expression: "format!(\"-- params: [{}]\\n{}\", params_string(q.params), q.sql)"
---
-- params: [TableId, Version]

            SELECT min_reader_version, min_writer_version
            FROM dl_protocol_updates
            WHERE table_id = $1 AND version <= $2
            ORDER BY version DESC
            LIMIT 1
