crates/catalog/tests/snapshots/golden__schema_ddl_DuckDb.snap
---
source: crates/catalog/tests/golden.rs
expression: "schema_ddl(d).join(\"\\n\")"
---
CREATE TABLE IF NOT EXISTS dl_table_heads (
                table_id UUID PRIMARY KEY,
                current_version BIGINT NOT NULL,
                updated_at TIMESTAMP NOT NULL
            )
CREATE TABLE IF NOT EXISTS dl_table_versions (
                table_id UUID NOT NULL,
                version BIGINT NOT NULL,
                committed_at TIMESTAMP NOT NULL,
                committer VARCHAR,
                operation VARCHAR,
                PRIMARY KEY (table_id, version)
            )
CREATE TABLE IF NOT EXISTS dl_metadata_updates (
                table_id UUID NOT NULL,
                version BIGINT NOT NULL,
                schema_json JSON NOT NULL,
                partition_columns VARCHAR[],
                table_properties JSON,
                PRIMARY KEY (table_id, version)
            )
CREATE TABLE IF NOT EXISTS dl_protocol_updates (
                table_id UUID NOT NULL,
                version BIGINT NOT NULL,
                min_reader_version INTEGER NOT NULL,
                min_writer_version INTEGER NOT NULL,
                PRIMARY KEY (table_id, version)
            )
CREATE TABLE IF NOT EXISTS dl_add_files (
                table_id UUID NOT NULL,
                version BIGINT NOT NULL,
                path VARCHAR NOT NULL,
                size_bytes BIGINT,
                partition_values JSON,
                modification_time BIGINT,
                PRIMARY KEY (table_id, version, path)
            )
CREATE TABLE IF NOT EXISTS dl_remove_files (
                table_id UUID NOT NULL,
                version BIGINT NOT NULL,
                path VARCHAR NOT NULL,
                deletion_timestamp BIGINT,
                data_change BOOLEAN,
                PRIMARY KEY (table_id, version, path)
            )
